--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # Configurations
 title:            Jekyll Gitbook
 longtitle:        Jekyll Gitbook
-author:           HE Tao
-email:            sighingnow@gmail.com
+author:           Yiming Wang
+email:            3196812536@qq.com
 description: >
   Build Jekyll site with the GitBook style.
 
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://sighingnow.github.io'
+url:              'https://pleasurecruise.github.io'
 baseurl:          '/jekyll-gitbook'
 rss:              RSS
 
