--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
+title:            Yiming's BLOG
+longtitle:        Yiming's Github Repository BLOG
 author:           Yiming Wang
 email:            3196812536@qq.com
 description: >
